# uet-kg-bigdata

./: .gitattributes  README.md  README_neo4j.md  requirements-neo4j.txt  test.json
benchmarks/: explain.html  explain.qmd
data-ingestion/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data-ingestion/config/: airflow_smoke_config.json  logging.yaml  sources.yaml  storage_layout.yaml
data-ingestion/crawler/: scrapy.cfg
data-ingestion/crawler/fixtures/: placeholder_source.html
data-ingestion/crawler/uet_crawler/: __init__.py  items.py  pipelines.py  settings.py  utils.py
data-ingestion/crawler/uet_crawler/spiders/: __init__.py  html_source_registry.py  source_registry_placeholder.py
data-ingestion/dags/: airflow_smoke_dag.py  ingestion_dag.py
data-ingestion/docker/airflow/: Dockerfile  requirements-airflow.txt
data-ingestion/docker/crawler/: Dockerfile  requirements.txt
data-ingestion/scripts/: airflow_runtime_smoke.py  bootstrap_sqlite.py  init_minio.py  quality_check.py  run_html_crawl.py  run_smoke_tests.py  upload_to_huggingface.py
data-ingestion/src/data_ingestion/: __init__.py  __main__.py  airflow_smoke.py  bootstrap.py  contracts.py  crawl_state.py  ingestion_runtime.py  logging_utils.py  pipeline.py  smoke_tests.py  source_registry.py
data-ingestion/tests/: conftest.py  test_airflow_smoke.py  test_bootstrap.py  test_contracts.py  test_crawl_state.py  test_crawler_scaffold.py  test_html_crawler.py  test_ingestion_runtime.py  test_pdf_reference_pipeline.py  test_pipeline.py  test_smoke_tests.py  test_source_registry.py
(+107 files in other folders)
